{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 28,
  "lineage": "248471a9-b5ea-c706-3e86-19cba7dc8eb6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034b230de33bde6fc",
            "arn": "arn:aws:ec2:eu-west-1:464535293192:elastic-ip/eipalloc-034b230de33bde6fc",
            "association_id": "eipassoc-0b784c0d8ccfd242f",
            "domain": "vpc",
            "id": "eipalloc-034b230de33bde6fc",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0d9486264e893d282",
            "private_dns": "ip-10-50-8-28.eu-west-1.compute.internal",
            "private_ip": "10.50.8.28",
            "public_dns": "ec2-54-171-77-239.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.77.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud-migrate-ai-dev-nat-eip"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:internet-gateway/igw-0059e8742758bafe2",
            "id": "igw-0059e8742758bafe2",
            "owner_id": "464535293192",
            "tags": {
              "Name": "cloud-migrate-ai-dev-igw"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-igw"
            },
            "vpc_id": "vpc-0592223a957394acf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034b230de33bde6fc",
            "association_id": "eipassoc-0b784c0d8ccfd242f",
            "connectivity_type": "public",
            "id": "nat-000ffbcdb2846090a",
            "network_interface_id": "eni-0d9486264e893d282",
            "private_ip": "10.50.8.28",
            "public_ip": "54.171.77.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d77f53aaa57b0d3",
            "tags": {
              "Name": "cloud-migrate-ai-dev-nat"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:route-table/rtb-0f155156c12f9de37",
            "id": "rtb-0f155156c12f9de37",
            "owner_id": "464535293192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000ffbcdb2846090a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-migrate-ai-dev-rt-private"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0592223a957394acf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:route-table/rtb-01552e218832feba5",
            "id": "rtb-01552e218832feba5",
            "owner_id": "464535293192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0059e8742758bafe2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-migrate-ai-dev-rt-public"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0592223a957394acf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea833b3d8bb7d86d",
            "route_table_id": "rtb-0f155156c12f9de37",
            "subnet_id": "subnet-0f4babcdf3023da65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041d968cf8d501221",
            "route_table_id": "rtb-0f155156c12f9de37",
            "subnet_id": "subnet-08913db56bd7be4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052bdb69537c140f9",
            "route_table_id": "rtb-01552e218832feba5",
            "subnet_id": "subnet-08d77f53aaa57b0d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0483e08dfad859",
            "route_table_id": "rtb-01552e218832feba5",
            "subnet_id": "subnet-00af5006541df5a7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:security-group/sg-02df58fb867d02bc6",
            "description": "Lambda outbound to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02df58fb867d02bc6",
            "ingress": [],
            "name": "cloud-migrate-ai-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "464535293192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-migrate-ai-dev-lambda-sg"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0592223a957394acf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:security-group/sg-000478ec4a1a34ee9",
            "description": "RDS ingress from Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000478ec4a1a34ee9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02df58fb867d02bc6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-migrate-ai-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "464535293192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-migrate-ai-dev-rds-sg"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0592223a957394acf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:subnet/subnet-0f4babcdf3023da65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.50.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4babcdf3023da65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464535293192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-migrate-ai-dev-private-a"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-private-a"
            },
            "vpc_id": "vpc-0592223a957394acf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:subnet/subnet-08913db56bd7be4f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08913db56bd7be4f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464535293192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-migrate-ai-dev-private-b"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-private-b"
            },
            "vpc_id": "vpc-0592223a957394acf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:subnet/subnet-08d77f53aaa57b0d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.50.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d77f53aaa57b0d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464535293192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-migrate-ai-dev-public-a"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-public-a"
            },
            "vpc_id": "vpc-0592223a957394acf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:subnet/subnet-00af5006541df5a7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af5006541df5a7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464535293192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-migrate-ai-dev-public-b"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-public-b"
            },
            "vpc_id": "vpc-0592223a957394acf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:464535293192:vpc/vpc-0592223a957394acf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0d69b668752749415",
            "default_route_table_id": "rtb-09a413aa52306509a",
            "default_security_group_id": "sg-0d4761d6be5383c37",
            "dhcp_options_id": "dopt-0c6c07c43de3eebbe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0592223a957394acf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a413aa52306509a",
            "owner_id": "464535293192",
            "tags": {
              "Name": "cloud-migrate-ai-dev-vpc"
            },
            "tags_all": {
              "Name": "cloud-migrate-ai-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}